[gd_scene load_steps=8 format=3 uid="uid://dvdwtisv5ow7b"]

[ext_resource type="Script" uid="uid://k7rdb8uuwufw" path="res://src/ui/MainMenu.gd" id="1_2v8qy"]
[ext_resource type="Shader" uid="uid://cjvxxsdq4gny2" path="res://src/shaders/scrolling.gdshader" id="2_2wh52"]
[ext_resource type="Texture2D" uid="uid://c8fy6qneuff6h" path="res://assets/sprites/bgfruits.png" id="3_ow34m"]
[ext_resource type="Texture2D" uid="uid://b0v021veuh2bu" path="res://assets/sprites/logobeta.png" id="4_ow34m"]

[sub_resource type="Gradient" id="Gradient_2wh52"]
colors = PackedColorArray(0.976471, 0.662745, 0.835294, 1, 0.996078, 0.843137, 0.682353, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ow34m"]
gradient = SubResource("Gradient_2wh52")
fill_to = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2wh52"]
shader = ExtResource("2_2wh52")
shader_parameter/speed = 0.05
shader_parameter/opacity = 0.467
shader_parameter/shaking = true
shader_parameter/amplitude = 1.0
shader_parameter/noise_scale = 20.0
shader_parameter/noise_speed = 20.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2v8qy")
metadata/_edit_horizontal_guides_ = [-14.0]

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.999
offset_right = 1.0
offset_bottom = 0.279907
texture = SubResource("GradientTexture2D_ow34m")

[node name="ScrollingBG" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_2wh52")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_bottom = 1.0
texture = ExtResource("3_ow34m")

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MenuContainer"]
layout_mode = 2
texture = ExtResource("4_ow34m")
expand_mode = 4
stretch_mode = 3

[node name="Title" type="Label" parent="MenuContainer"]
visible = false
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
text = "Logic Blender"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PlayButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "PLAY GAME"

[node name="Spacer2" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="DebugButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "DEBUG OPTIONS"

[node name="Spacer3" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SettingsButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "SETTINGS"

[node name="Spacer4" type="Control" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ProgressButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Progress & Stats"

[node name="Spacer5" type="Control" parent="MenuContainer"]
layout_mode = 2

[node name="GridButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Grid Menu"

[node name="QuitButton" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "QUIT"

[node name="BlenderEmoji" type="Label" parent="MenuContainer"]
visible = false
layout_mode = 2
text = "ü•§"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="MenuContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Boolean Logic Learning Game"
horizontal_alignment = 1

[node name="ProofBuilderButton" type="Button" parent="MenuContainer"]
visible = false
layout_mode = 2

[node name="DebugPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="DebugContainer" type="VBoxContainer" parent="DebugPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DebugTitle" type="Label" parent="DebugPanel/DebugContainer"]
layout_mode = 2
text = "DEBUG OPTIONS"
horizontal_alignment = 1

[node name="DifficultyContainer" type="HBoxContainer" parent="DebugPanel/DebugContainer"]
layout_mode = 2

[node name="DifficultyLabel" type="Label" parent="DebugPanel/DebugContainer/DifficultyContainer"]
layout_mode = 2
text = "Difficulty:"

[node name="DifficultySlider" type="HSlider" parent="DebugPanel/DebugContainer/DifficultyContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="DifficultyValue" type="Label" parent="DebugPanel/DebugContainer/DifficultyContainer"]
layout_mode = 2
text = "1"

[node name="InfinitePatienceCheck" type="CheckBox" parent="DebugPanel/DebugContainer"]
layout_mode = 2
text = "Infinite Patience"

[node name="ForceGameOverButton" type="Button" parent="DebugPanel/DebugContainer"]
layout_mode = 2
text = "Force Game Over"

[node name="LogicTestButton" type="Button" parent="DebugPanel/DebugContainer"]
layout_mode = 2
text = "Test Logic Engine"

[node name="IntegrationTestButton" type="Button" parent="DebugPanel/DebugContainer"]
layout_mode = 2
text = "Run Integration Test"

[node name="CloseDebugButton" type="Button" parent="DebugPanel/DebugContainer"]
layout_mode = 2
text = "CLOSE"

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsTitle" type="Label" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "SETTINGS"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="SettingsPanel/SettingsContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="DifficultyModeLabel" type="Label" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "Classic Mode Difficulty:"

[node name="DifficultyModeContainer" type="HBoxContainer" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2

[node name="DifficultyModeOption" type="OptionButton" parent="SettingsPanel/SettingsContainer/DifficultyModeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoLabel" type="Label" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "Auto: Difficulty increases as you play
1-6: Lock difficulty to specific level"
autowrap_mode = 3

[node name="Spacer2" type="Control" parent="SettingsPanel/SettingsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CloseSettingsButton" type="Button" parent="SettingsPanel/SettingsContainer"]
layout_mode = 2
text = "CLOSE"

[node name="QuickStatsPanel" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0

[node name="QuickStatsTitle" type="Label" parent="QuickStatsPanel"]
layout_mode = 2
text = "Quick Stats"

[node name="HighScoreQuick" type="Label" parent="QuickStatsPanel"]
layout_mode = 2

[node name="GamesPlayedQuick" type="Label" parent="QuickStatsPanel"]
layout_mode = 2

[node name="StreakQuick" type="Label" parent="QuickStatsPanel"]
layout_mode = 2

[node name="FruitEmoji1" type="Label" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 22.0
offset_bottom = 17.0
rotation = 0.261799
text = "üçì"

[node name="FruitEmoji2" type="Label" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 22.0
offset_bottom = 17.0
rotation = -0.523599
text = "üçå"

[node name="FruitEmoji3" type="Label" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 22.0
offset_bottom = 17.0
rotation = 0.785398
text = "üçä"

[connection signal="pressed" from="MenuContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuContainer/DebugButton" to="." method="_on_debug_button_pressed"]
[connection signal="pressed" from="MenuContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="DebugPanel/DebugContainer/DifficultyContainer/DifficultySlider" to="." method="_on_difficulty_slider_value_changed"]
[connection signal="toggled" from="DebugPanel/DebugContainer/InfinitePatienceCheck" to="." method="_on_infinite_patience_check_toggled"]
[connection signal="pressed" from="DebugPanel/DebugContainer/ForceGameOverButton" to="." method="_on_force_game_over_button_pressed"]
[connection signal="pressed" from="DebugPanel/DebugContainer/LogicTestButton" to="." method="_on_logic_test_button_pressed"]
[connection signal="pressed" from="DebugPanel/DebugContainer/IntegrationTestButton" to="." method="_on_integration_test_button_pressed"]
[connection signal="pressed" from="DebugPanel/DebugContainer/CloseDebugButton" to="." method="_on_close_debug_button_pressed"]
[connection signal="item_selected" from="SettingsPanel/SettingsContainer/DifficultyModeContainer/DifficultyModeOption" to="." method="_on_difficulty_mode_option_item_selected"]
[connection signal="pressed" from="SettingsPanel/SettingsContainer/CloseSettingsButton" to="." method="_on_close_settings_button_pressed"]
